--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.11.0",
+    "animate.css": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
@@ -20,8 +21,9 @@
     "express": "^4.16.4",
     "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.21",
-    "nuxt": "^2.13.3"
+    "mongoose": "^5.9.22",
+    "nuxt": "^2.13.3",
+    "vue-fullpage.js": "^0.1.5"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2",
