--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-validator": "^6.6.0",
+    "fullpage-vue": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.22",
-    "nuxt": "^2.13.3",
-    "vue-fullpage.js": "^0.1.5"
+    "nuxt": "^2.13.3"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2",
