--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "fullpage-vue": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.22",
-    "nuxt": "^2.13.3"
+    "nuxt": "^2.13.3",
+    "vue-upload-component": "^2.8.20",
+    "vue2-editor": "^2.10.2"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2",
